make sure the roll button isn't covering the last tile.

--- a/src/components/GameBoard/styles.css
+++ b/src/components/GameBoard/styles.css
@@ -1,5 +1,5 @@
 .gameboard {
-  display: block;
+  display: grid;
   height: 100%;
   overflow-y: auto;
   padding-bottom: 6rem;
